--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,20 @@
     outline: none;
     padding: 10px;
 }
+
+.fab {
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 25px;
+    padding: 10px;
+    position: fixed;
+    right: 25px;
+}
+.fab-danger{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 20px;
+    /* padding: 10px; */
+    position: fixed;
+    left: 25px;
+}
